--- a/DataProcessing/packages.config
+++ b/DataProcessing/packages.config
@@ -3,6 +3,7 @@
   <package id="Dapper" version="2.0.78" targetFramework="net472" />
   <package id="LiteDB" version="5.0.10" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.BootstrapIcons" version="4.8.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net472" />
 </packages>
