--- a/DataProcessing/DataProcessing.csproj
+++ b/DataProcessing/DataProcessing.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Utils\Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Utils\Converters\MarkerToColorConverter.cs" />
     <Compile Include="Utils\Converters\SecondsToUnitConverter.cs" />
+    <Compile Include="Utils\Converters\StateToVisibilityConverter.cs" />
     <Compile Include="Utils\ExportOptions.cs" />
     <Compile Include="Utils\SpecificCriteria.cs" />
     <Compile Include="Utils\SpecificCriteriaComparer.cs" />
