--- a/DataProcessing/DataProcessing.csproj
+++ b/DataProcessing/DataProcessing.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Utils\SpecificCriteriaComparer.cs" />
     <Compile Include="Utils\UpdateViewCommand.cs" />
     <Compile Include="Utils\ViewType.cs" />
+    <Compile Include="ViewModels\FrequencyRangesViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\WorkfileEditorViewModel.cs" />
     <Compile Include="Views\Home.xaml.cs">
